[package]
name = "exam_file_compressor"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-multipart = "0.6.0"
actix-cors = "0.6.4"
futures = "0.3.28"
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
env_logger = "0.10.0"
log = "0.4.19"
uuid = { version = "1.4.1", features = ["v4"] }
image = "0.24.6"
lopdf = "0.31.0"
mime = "0.3.17"
mime_guess = "2.0.4"
bytes = "1.4.0"
tempfile = "3.7.0"
rand = "0.8.5"
